--- a/views/blog/moodBlog.html
+++ b/views/blog/moodBlog.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block wrapper %}
+<canvas id="canvas"></canvas>
 <div class="content rel cover">
     {% if sear == 0 %}
     <div class="date">
