--- a/public/blogStatic/css/base.css
+++ b/public/blogStatic/css/base.css
@@ -1,4 +1,4 @@
-nav.top{width:100%;min-width:1200px;height:40px;background:rgba(255,255,255,.9);box-shadow:0 2px 6px rgba(0,0,0,.1);position:fixed;top:0;z-index:100;}
+nav.top{width:100%;min-width:1200px;height:40px;background:rgba(255,255,255,1);box-shadow:0 2px 6px rgba(0,0,0,.1);position:fixed;top:0;z-index:100;}
 nav.top ul{width: 1100px;margin:0 auto;}
 nav.top ul li{float:right;margin-top:10px;}
 nav.top ul li:nth-child(1){float:left;}
@@ -14,9 +14,9 @@ nav.top ul li a:hover{color:#999;}
 
 .wrapper .content .line em{display:inline-block;width:110px;height:20px;line-height:20px;background:url(../images/seat.png) no-repeat left;}
 .wrapper .content .line a{display:inline-block;font-size:14px;padding:0 10px;color:#333;}
-.footer{width:100%;height:30px;line-height:30px;font-size:12px;*text-shadow: #efefef 1px 1px 1px;color:#fff;text-align:center;background: #333;}
-.footer a{color:#fff;}
-.footer a:hover{color:#ccc;}
+.footer{width:100%;height:30px;line-height:30px;font-size:12px;*text-shadow: #efefef 1px 1px 1px;color:#888;text-align:center;background: #333;}
+.footer a{color:#666;}
+.footer a:hover{color:#999;}
 
 @media screen and (max-width:520px){
 	.wrapper,.top,.clearFix,.footer{display:none;}
