--- a/views/blog/modelTwo.html
+++ b/views/blog/modelTwo.html
@@ -12,7 +12,7 @@
 		<p class="cat cat2 abs"><img src="/blogStatic/images/cat/tiantiansifangmao-14.png"></p>
 		<p class="cat cat3 abs"><img src="/blogStatic/images/cat/tiantiansifangmao-15.png"></p>
 		<div class="personal abs">
-			<a class="portrait rel" href="/blog/personal"><img src="{{userData.head_path}}"><span class="name abs">{{userData.name}}</span></a>
+			<a class="portrait rel" href="/blog/personal"><img src="/blogStatic/images/mood/c-02.jpg"><span class="name abs">Maker</span></a>
 		</div>
 
 		<ul class="abs">
