--- a/public/blogStatic/css/indexBlog.css
+++ b/public/blogStatic/css/indexBlog.css
@@ -12,8 +12,8 @@ body{background:#F7FAF3;}
 .wrapper .spring .listBar .cat2{bottom:-50px;right:160px;}
 .wrapper .spring .listBar .cat3{bottom:-22px;left:160px;}
 .wrapper .spring .listBar .personal{top:40px;left:40px;text-align:center;z-index:10;}
-.wrapper .spring .listBar .personal .portrait{display:inline-block;width:120px;height:120px;border-radius:60px;border:3px solid #fff;overflow:hidden;margin-bottom:6px;}
-.wrapper .spring .listBar .personal .portrait img{width:100%;}
+.wrapper .spring .listBar .personal .portrait{display:inline-block;width:120px;height:120px;border-radius:64px;border:3px solid #ccc;overflow:hidden;margin-bottom:6px;}
+.wrapper .spring .listBar .personal .portrait img{width:100%;height:100%;}
 .wrapper .spring .listBar .personal .portrait .name{width:100%;left:0;bottom:-40px;height:30px;line-height:30px;color:#fff;background:rgba(0,0,0,.6);transition: bottom .5s ease-out;}
 .wrapper .spring .listBar .personal .portrait:hover .name{bottom:0;}
 .wrapper .spring .listBar ul{width:100%;z-index:2;}
@@ -92,12 +92,12 @@ body{background:#F7FAF3;}
 .wrapper .content .title{width:100px;height:40px;line-height:40px;font-size:20px;background:#fff;top:-16px;left:0;}
 .wrapper .content .title span{color:#FE51A5;font-weight: bold;}
 
-.wrapper .content .left li{width:100%;min-height:200px;padding-top:20px;}
+.wrapper .content .left li{width:100%;padding-top:20px;}
 .wrapper .content .left li h4 a{color: #333;}
 .wrapper .content .left .artCont{margin:10px 0;position:relative;}
 .wrapper .content .left .artCont .img{float:left;width:180px;min-height:80px;padding:4px;border:1px solid #efefef;}
 .wrapper .content .left .artCont .img img{width:180px;}
-.wrapper .content .left .artCont p{float:left;width:540px;font-size:14px;color: #666;margin-left:10px;}
+.wrapper .content .left .artCont p{float:left;width:500px;font-size:14px;color: #666;margin-left:10px;}
 .wrapper .content .left .artCont .button{padding:6px 10px;background:#ED6CAF;font-size:14px;color:#fff;cursor:pointer;position:absolute;bottom:10px;right:0;}
 .wrapper .content .left .artMess{width:100%;height:30px;line-height:30px;text-indent:2em;font-size:12px;background:#F6F6F6;}
 .wrapper .content .left .artMess dd{float:left;margin-right:20px;}
