--- a/views/blog/moodBlog.html
+++ b/views/blog/moodBlog.html
@@ -45,7 +45,7 @@
                     </time>
                     <em>{{obj.content}}</em>
                 </p>
-                <p class="img"><img src="{{obj.imagepath}}"></p>
+                <p class="img"><img src="/blogStatic/images/mood/c-02.jpg"></p>
             </li>
             {% endfor %}
         </ul>
