static_config文件添加注释 index.html js文件路径bug修改

--- a/views/zone/index.html
+++ b/views/zone/index.html
@@ -68,5 +68,5 @@
 {% endblock %}
 
 {% block script %}
-<script type="text/javascript" src="/{{zone_static}}/js/index.js"></script>
+<script type="text/javascript" src="{{zone_static}}/js/index.js"></script>
 {% endblock %}
