--- a/public/static/zone/css/base.css
+++ b/public/static/zone/css/base.css
@@ -1,10 +1,11 @@
-nav.top{width:100%;min-width:1200px;height:40px;background:rgba(0,0,0,.6);box-shadow:0 2px 6px rgba(0,0,0,.1);position:fixed;top:0;z-index:100;}
+nav.top{width:100%;min-width:1200px;height:60px;background:#fff;box-shadow:0 2px 6px rgba(0,0,0,.1);position:fixed;top:0;z-index:100;}
 nav.top ul{width: 1100px;margin:0 auto;}
-nav.top ul li{float:right;margin-top:10px;}
+nav.top ul li{float:right;margin-top:20px;}
 nav.top ul li:nth-child(1){float:left;}
-nav.top ul li a{padding:0 20px;color:#ccc;border-left:1px solid #888;}
-nav.top ul li a.cur{color:#fff;}
-nav.top ul li a:hover{color:#efefef;}
+nav.top ul li a{padding:0 20px;color:#333;border-left:1px solid #ddd;}
+nav.top ul li a.cur{color: #61B6E8;}
+nav.top ul li a:hover{color:#ccc;}
+nav.top ul li a.cur:hover{color:#61B6E8;}
 .clearFix{width:100%;height:40px;}
 .wrapper{width:100%;min-width:1200px;}
 .wrapper .content{width:1100px;min-height:750px;margin:0 auto;padding-bottom:30px;}
