--- a/public/static/zone/css/index.css
+++ b/public/static/zone/css/index.css
@@ -98,7 +98,7 @@ body{background:#F7FAF3;}
 .wrapper .content .left .artCont .img{float:left;width:180px;min-height:80px;padding:4px;border:1px solid #efefef;}
 .wrapper .content .left .artCont .img img{width:180px;}
 .wrapper .content .left .artCont p{float:left;width:500px;font-size:14px;color: #666;margin-left:10px;}
-.wrapper .content .left .artCont .button{padding:6px 10px;background:#ED6CAF;font-size:14px;color:#fff;cursor:pointer;position:absolute;bottom:10px;right:0;}
+.wrapper .content .left .artCont .button{padding:6px 10px;background: #72c3e8;font-size:14px;color:#fff;cursor:pointer;position:absolute;bottom:10px;right:0;}
 .wrapper .content .left .artMess{width:100%;height:30px;line-height:30px;text-indent:2em;font-size:12px;background:#F6F6F6;}
 .wrapper .content .left .artMess dd{float:left;margin-right:20px;}
 .wrapper .content .left .artMess dd time{padding-left:1.5em;background:url(../images/time.jpg) no-repeat left center;}
