--- a/views/zone/part/loginSuccess.html
+++ b/views/zone/part/loginSuccess.html
@@ -30,7 +30,7 @@
     <ul></ul>
 </div>
 
-<!-- 干活篇 -->
+<!-- 奋斗篇 -->
 <div class="work ">
     <div class="wrapper">
         <a class="faqbox poabs cus" href="/zone"></a>
@@ -40,8 +40,10 @@
 
         <!---心情-->
         <div class="dai cus cpBlk">
-            <div class="zi poabs cp"><img src="{{zone_static}}/images/navigation/mood.png"></div>
-            <div class="dao poabs cpdap"><img src="{{zone_static}}/images/navigation/mood_isle.png"></div>
+            <a href="/struggle/w_mood">
+                <div class="zi poabs cp"><img src="{{zone_static}}/images/navigation/mood.png"></div>
+                <div class="dao poabs cpdap"><img src="{{zone_static}}/images/navigation/mood_isle.png"></div>
+            </a>
         </div>
 
         <!--分享-->
