--- a/public/static/common/css/base.css
+++ b/public/static/common/css/base.css
@@ -35,6 +35,7 @@ body,button,input,select,textarea{
 input,select,textarea{
     font-size:100%;
 }
+i,em{font-style: normal;}
 
 textarea{
     resize: none;
@@ -161,3 +162,69 @@ input[type="text"],select,textarea{
     text-overflow: ellipsis;
     word-wrap: normal;
 }
+@font-face {
+    font-family: myFont;
+    src: url('../font/fzyx.TTF');
+}
+@font-face {
+    font-family: myFont2;
+    src: url('../font/fzjl.fon');
+}
+@font-face {
+    font-family: myFont3;
+    src: url('../font/txt.ttf');
+}
+.clear{clear: both;}
+.dis{display:none;}
+.blk{display:block;}
+.inblk{display:inline-block;}
+/*字体大小*/
+.f12{font-size:12px;}
+.f13{font-size:13px;}
+.f14{font-size:14px;}
+.f15{font-size:15px;}
+.f16{font-size:16px;}
+.f18{font-size:18px;}
+.f20{font-size:20px;}
+.f24{font-size:24px;}
+.f32{font-size:32px;}
+
+/*字体加粗*/
+.w300{font-weight:300;}
+.w600{font-weight:600;}
+
+/*间距*/
+.mt20{margin-top: 20px;}
+.mb20{margin-bottom: 20px;}
+.mt40{margin-top: 40px;}
+.mb40{margin-bottom: 40px;}
+.mt60{margin-top: 60px;}
+.mb60{margin-bottom: 60px;}
+.mt80{margin-top: 80px;}
+.mb80{margin-bottom: 80px;}
+
+/*浮动*/
+.fl{float:left;}
+.fr{float:right;}
+
+/*清浮动*/
+.clear:after{content:"";display:block;clear:both;}
+
+/*遮罩*/
+.cover:before{content:"";position:absolute;width:100%;height:100%;z-index:10;}
+.frame{position:fixed;top:0;bottom:0;left:0;right:0;background:rgba(0,0,0,.9);z-index:1000;}
+/*定位*/
+.abs{position:absolute;}
+.rel{position:relative;}
+.fix{position:fixed;}
+
+.hide{display:none;}
+/*提示框*/
+.messBox{position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.8);z-index:99999;}
+.contBox{position:absolute;left:8%;top:20%;height:40%;width:80%;max-width:480px;max-height:280px;min-height:260px;background:#fff;border-radius:4px;text-align:center;}
+
+/*阴影*/
+.shadow{border:1px solid #efefef;box-shadow:2px 2px 10px rgba(0,0,0,.1);}
+
+/*倒影*/
+.reflect{-webkit-box-reflect: below 0 -webkit-linear-gradient(top,rgba(250,250,250,0),rgba(250,250,250,.0) 30%,rgba(250,250,250,0.3));}
