--- a/views/wechat/base.html
+++ b/views/wechat/base.html
@@ -8,17 +8,15 @@
     <meta name="x5-orientation" content="portrait">
     <meta name="MobileOptimized" content="320">
     <meta name="format-detection" content="telephone=no">
-    <link type="text/css" rel="stylesheet" href="{{wechat_static}}/css/base.css"/>
+    <link type="text/css" rel="stylesheet" href="{{common_static}}/css/base.css"/>
     <link type="text/css" rel="stylesheet" href="{{common_static}}/css/animate.min.css"/>
     <link type="text/css" rel="stylesheet" href="{{common_static}}/css/spop.min.css"/>
     {% block css %} {% endblock %}
+    <script type="text/javascript" src="{{common_static}}/js/jquery-1.12.4.min.js"></script>
 </head>
 <body>
 <input id="device" type="hidden" value="pc"/>
-{% block body %}
-
-{% endblock %}
-<script type="text/javascript" src="{{common_static}}/js/jquery-1.12.4.min.js"></script>
+{% block body %} {% endblock %}
 <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" src="{{wechat_static}}/js/common/wechat.check.config.js"></script>
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
@@ -26,7 +24,7 @@
 <script type="text/javascript" src="{{common_static}}/js/effects-mk.js"></script>
 <script type="text/javascript" src="{{common_static}}/js/common.js"></script>
 <script type="text/javascript" src="{{common_static}}/js/constant.js"></script>
-{% block script %}{% endblock %}
+{% block script %} {% endblock %}
 <script>
     function is_weixin() {
         const ua = navigator.userAgent.toLowerCase();
